move pkg; update pom;