@@ -1,28 +1,24 @@
-package com.leammin.leetcode.util.leetcode;
+package com.leammin.leetcode.main;
 
-import com.alibaba.fastjson.JSON;
-import com.alibaba.fastjson.JSONArray;
-import com.alibaba.fastjson.serializer.SerializerFeature;
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class LeetcodeQuestions {
     private static final Path LEETCODE_FILE_PATH = Paths.get("src", "main", "resources", "leetcode.json");
 
     public static void writeLeetcodeFile(List<Question> questions) {
-        String questionStr = JSON.toJSONString(questions, SerializerFeature.PrettyFormat, SerializerFeature.WriteMapNullValue,
-                SerializerFeature.WriteDateUseDateFormat);
-
+        Gson gson = new GsonBuilder().setPrettyPrinting().serializeNulls().disableHtmlEscaping().create();
+        String questionStr = gson.toJson(questions);
         try {
             Files.writeString(LEETCODE_FILE_PATH, questionStr);
         } catch (IOException e) {
@@ -33,8 +29,10 @@ public class LeetcodeQuestions {
     public static List<Question> getAllQuestionsFromFile() {
         try {
             String questionStr = Files.readString(LEETCODE_FILE_PATH);
-            return JSONArray.parseArray(questionStr, Question.class).stream()
-                    .filter(q -> !q.needInit()).collect(Collectors.toList());
+            Question[] questions = new GsonBuilder().create().fromJson(questionStr, Question[].class);
+            return Arrays.stream(questions)
+                    .filter(q -> !q.needInit())
+                    .toList();
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
@@ -47,21 +45,20 @@ public class LeetcodeQuestions {
                 .map(Question::getQuestionId)
                 .collect(Collectors.toSet());
 
-        List<Question> fileNotExist = questionsFromLeetcode.stream()
-                .filter(q -> !idsFromFile.contains(q.getQuestionId()))
-                .collect(Collectors.toList());
-        questionsFromFile.addAll(fileNotExist);
+        Stream<Question> fileNotExist = questionsFromLeetcode.stream().filter(q -> !idsFromFile.contains(q.getQuestionId()));
+        List<Question> allQuestions = Stream.concat(questionsFromFile.stream(), fileNotExist)
+                .toList();
         try {
-            for (Question question : questionsFromFile) {
-                if (question.needInit()) {
-                    System.out.println("初始化中: " + question);
-                    question.init();
-                }
-            }
+            allQuestions.stream()
+                    .filter(Question::needInit)
+                    .forEach(q -> {
+                        System.out.println("初始化中: " + q);
+                        q.init();
+                    });
         } finally {
-            LeetcodeQuestions.writeLeetcodeFile(questionsFromFile);
+            LeetcodeQuestions.writeLeetcodeFile(allQuestions);
         }
-        return questionsFromFile;
+        return allQuestions;
     }
 
     private static Optional<Question> getQuestionByKey(List<Question> allQuestions, String key) {
@@ -71,7 +68,8 @@ public class LeetcodeQuestions {
                         Objects.equals(question.getTitle(), key) ||
                         Objects.equals(question.getTranslatedTitle(), key)
                 )
-                .findFirst().filter(q -> !q.needInit());
+                .filter(q -> !q.needInit())
+                .findFirst();
     }
 
     public static Question getQuestion(String key) {
@@ -83,6 +81,7 @@ public class LeetcodeQuestions {
     }
 
     private final static Pattern urlRegex = Pattern.compile(".*leetcode.cn/problems/([A-Za-z0-9-]+).*");
+
     private static String handleKey(String key) {
         // https://leetcode.cn/problems/count-nice-pairs-in-an-array/
         Matcher matcher = urlRegex.matcher(key);
